--- a/jquery/jqueryTutorial.html
+++ b/jquery/jqueryTutorial.html
@@ -25,7 +25,7 @@
     <div id="output1" class="code">Outputs here ...</div>
     <script>
       $("#comp1").click(function{
-        document.getElementById("output1").innerHTML = document.getElementById("input1");
+        document.getElementById("output1").innerHTML() = document.getElementById("input1").innerHTML();
       });
     </script>
   </body>
