Fix HTML viewer

--- a/jquery/jqueryTutorial.html
+++ b/jquery/jqueryTutorial.html
@@ -25,10 +25,5 @@
     <div id="output1" class="code">Outputs here ...</div>
     <script>
       $("#comp1").click(function{
-        var output1text = document.getElementById("input1")
-        var input1text = document.getElementById("output1")
-        output1text.innerHTML = input1text.innerHTML
-      });
-    </script>
-  </body>
-</html>
+        var input1 = document.getElementById("input1")
+        var output1 = document.getElementById
