--- a/jquery/jqueryTutorial.html
+++ b/jquery/jqueryTutorial.html
@@ -27,3 +27,7 @@
       $("#comp1").click(function{
         var input1 = document.getElementById("input1")
         var output1 = document.getElementById
+      });
+    </script>
+  </body>
+</html>
