--- a/jquery/jqueryTutorial.html
+++ b/jquery/jqueryTutorial.html
@@ -26,7 +26,8 @@
     <script>
       $("#comp1").click(function{
         var input1 = document.getElementById("input1")
-        var output1 = document.getElementById
+        var output1 = document.getElementById("output1")
+        output1.innerHTML = input1.value
       });
     </script>
   </body>
