--- a/jquery/jqueryTutorial.html
+++ b/jquery/jqueryTutorial.html
@@ -25,13 +25,12 @@
     <div id="output1" class="code">Outputs here ...</div>
     <script>
       $("#comp1").click(function(){
-          click1();
-          
+        click1();
       });
       function click1() {
-        var input1 = document.getElementById("input1");
-        var output1 = document.getElementById("output1");
-        output1.innerHTML = input1.value;
+        var input1 = document.getElementById("input1")
+        var output1 = document.getElementById("output1")
+        output1.innerHTML = input1.value
       }
     </script>
   </body>
