--- a/minecraftDungeons/index.html
+++ b/minecraftDungeons/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 <h1>Minecraft Dungeons Modding Tutorial</h1>
+<div class="warning">
+    <h2>Warning</h2>
+    <p>This Tutorial is for Windows 10/11 Only, I cannot garenty that it will or won't work on other operating systems</p>
+</div>
 <div>
 </body>
 </html>
