--- a/minecraftDungeons/index.html
+++ b/minecraftDungeons/index.html
@@ -29,6 +29,8 @@
 <h2>Things We will be using.</h2>
 <ol>
     <li>MCD Save Edit</li>
+    <li>UUU3 (unreal Engine unlocker)</li>
+    <li>Auto Dungeoneer</li>
     <li>Minecraft Dungeons</li>
     <li>UWP Dumper (Only if you have microsoft store version of game.)</li>
 </ol>
