--- a/minecraftDungeons/index.html
+++ b/minecraftDungeons/index.html
@@ -18,10 +18,20 @@
             border-radius: 7px;
             width: 75%;
         }
+        code{
+            background-color:lightgray;
+            border:gray 1px solid;
+            border-radius: 7px;
+            font-family:monospace;
+            padding:3px;
+        }
     </style>
 </head>
 
 <body>
+    <div id="header">
+        <img src="https://www.minecraft.net/content/dam/games/dungeons/logos/dungeons-pmp-ultedit-logo-525x167.png" alt="Minecraft Dungeons Modding Logo">
+    </div>
     <h1>Minecraft Dungeons Modding Tutorial</h1>
     <div class="warning">
         <h2>Warning</h2>
@@ -46,16 +56,22 @@
             computer. Look for one called Dungeons.exe then put the number to the left of it into the text box at the
             bottom, if you cant find one, thats okay. Open task manager then find minecraft dungeons, click goto details
             then find the process ID, put that into UWPDumper. Once you complete those steps it should download a folder
-            called DUMP. To veiw it goto C:\Users\Username\AppData\Local\Packages\Microsoft.Lovika\TempState. When you
+            called DUMP. To veiw it goto <pre><code>C:\Users\Username\AppData\Local\Packages\Microsoft.Lovika\TempState</code></pre>. When you
             open MCDsave Edit and it asks you where the .pak files are select the DUMP folder.
         </p>
     </div>
+    <div class="info">
+        <h2>What to do if the game isnt signing in.</h2>
+        <p>First Dump the game and find the dumped files, then run <pre><code>Dungeons.exe</code></pre></p>
+    </div>
+    <h2 id="charMod">Modding Characters</h2>
     <p>
         to start out, lets download <a
             href="https://github.com/CutFlame/MCDSaveEdit/releases/tag/release%2F1.5.5.0">MCDSave Edit</a>, then run it
         if you have are on the microsoft version select the dump for the .pak, if else it should be automatically
-        configurated.<br>to find your character file goto C:\Users\Username\SavedGames\MojangStudios\Dungeons\(there is
-        some numbers here)\characters then choose the character file you want to edit.
+        configurated.<br>to find your character file goto 
+        <pre><code>C:\Users\Username\SavedGames\MojangStudios\Dungeons\(there issome numbers here)\characters</code></pre>
+         then choose the character file you want to edit.
 </body>
 
 </html>
